# yarutsk

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTERNALS.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES  deny.toml  mkdocs.yml  pyproject.toml  yarutsk.pyi
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench_yaml.py  test_benchmarks.py
docs/: api.md  changelog.md  contributing.md  errors.md  index.md  installation.md  integrations.md  limitations.md  roundtrip.md  threading.md
fuzz/: Cargo.toml  seed_corpus.sh
fuzz/fuzz_targets/: idempotent_emit.rs  parser.rs  roundtrip.rs  scanner.rs
python/yarutsk/: __init__.py  __init__.pyi
src/: builder.rs  char_traits.rs  debug.rs  emitter.rs  lib.rs  parser.rs  scanner.rs  types.rs
src/core/: builder.rs  char_traits.rs  debug.rs  emitter.rs  mod.rs  parser.rs  scanner.rs  types.rs
src/py/: convert.rs  live.rs  macros.rs  mod.rs  py_iter.rs  py_mapping.rs  py_node.rs  py_scalar.rs  py_sequence.rs  schema.rs  sort.rs  streaming.rs  style_parse.rs
tests/: _yaml_suite.py  test_api.py  test_comments.py  test_constructors.py  test_format_preservation.py  test_formatting.py  test_invalid_input.py  test_loading.py  test_quoting_regressions.py  test_roundtrip.py  test_roundtrip_property.py  test_roundtrip_styles.py  test_schema.py  test_schema_property.py  test_serialization.py  test_sort.py  test_threading.py  test_types.py  test_yaml_suite.py  test_yaml_suite_format.py  test_yarutsk.py  typing_check.py
tools/: refresh-vendor.sh  regen-patch.sh
