[package]
name = "yarutsk"
version = "0.7.7"
edition = "2024"
rust-version = "1.85"
description = "A YAML round-trip library that preserves comments and insertion order"
license = "MIT"

[lib]
name = "_yarutsk"
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2"
pyo3 = { version = "0.28", features = ["indexmap"] }
arraydeque = "0.5"
base64 = "0.22"

[features]
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = true

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
