[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yarutsk"
dynamic = ["version"]
description = "A YAML round-trip library that preserves comments and insertion order"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/theyugin/yarutsk"
Repository = "https://github.com/theyugin/yarutsk"

[tool.maturin]
include = ["yarutsk.pyi"]

[tool.mypy]
files = ["tests/typing_check.py"]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
benchmark = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "pytest-benchmark[histogram]>=5.0",
]
