[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yarutsk"
dynamic = ["version"]
description = "A YAML round-trip library that preserves comments and insertion order"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/theyugin/yarutsk"
Repository = "https://github.com/theyugin/yarutsk"
Documentation = "https://theyugin.github.io/yarutsk/"
Changelog = "https://github.com/theyugin/yarutsk/blob/main/CHANGELOG.md"
Issues = "https://github.com/theyugin/yarutsk/issues"

[tool.maturin]
include = ["yarutsk.pyi"]
features = ["extension-module"]

[tool.mypy]
files = ["tests/typing_check.py"]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["yaml-test-suite", ".venv", "target"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "maturin>=1.13.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
benchmark = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "pytest-benchmark[histogram]>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
